--- a/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
+++ b/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
@@ -11,6 +11,14 @@
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>1.0.0-beta.1</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0-beta.1</InformationalVersion>
+    <Copyright>© $([System.DateTime]::Now.Year) Natalia Portillo</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite"/>
     <PackageReference Include="Microsoft.Extensions.Localization"/>
