--- a/RomRepoMgr.Core/RomRepoMgr.Core.csproj
+++ b/RomRepoMgr.Core/RomRepoMgr.Core.csproj
@@ -1,5 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Version>1.0.0-beta.1</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0-beta.1</InformationalVersion>
+    <Copyright>© $([System.DateTime]::Now.Year) Natalia Portillo</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Aaru.Checksums.Native"/>
     <PackageReference Include="DotNetZip"/>
