--- a/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
+++ b/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
@@ -17,6 +17,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <InformationalVersion>1.0.0-beta.1</InformationalVersion>
     <Copyright>© $([System.DateTime]::Now.Year) Natalia Portillo</Copyright>
+    <ApplicationIcon>romrepomgr.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
