--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -12,6 +12,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <InformationalVersion>1.0.0-beta.1</InformationalVersion>
     <Copyright>© $([System.DateTime]::Now.Year) Natalia Portillo</Copyright>
+    <ApplicationIcon>Assets/romrepomgr.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
