--- a/RomRepoMgr.Core/RomRepoMgr.Core.csproj
+++ b/RomRepoMgr.Core/RomRepoMgr.Core.csproj
@@ -6,6 +6,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <InformationalVersion>1.0.0-beta.1</InformationalVersion>
     <Copyright>© $([System.DateTime]::Now.Year) Natalia Portillo</Copyright>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
