--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,10 +1,11 @@
 <Project ToolsVersion="15.0">
   <ItemGroup>
-    <PackageVersion Include="Aaru.Checksums.Native" Version="6.0.0-alpha.10"/>
+    <PackageVersion Include="Aaru.Checksums.Native" Version="6.0.0-alpha.11"/>
     <PackageVersion Include="AsyncFixer" Version="1.6.0"/>
     <PackageVersion Include="Avalonia.Controls.DataGrid" Version="11.3.2"/>
     <PackageVersion Include="Avalonia.Desktop" Version="11.3.2"/>
     <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.2"/>
+    <PackageVersion Include="Avalonia.ReactiveUI" Version="11.3.2"/>
     <PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0"/>
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.2"/>
     <PackageVersion Include="Avalonia" Version="11.3.2"/>
@@ -20,6 +21,8 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7"/>
     <PackageVersion Include="Microsoft.Extensions.Localization" Version="9.0.7"/>
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.7"/>
+    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.12.1"/>
+    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.12.1"/>
     <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.DataGrid.EntityFrameworkAdapter" Version="4.12.1"/>
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15"/>
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0"/>
@@ -29,28 +32,24 @@
     <PackageVersion Include="Roslynator.Analyzers" Version="4.14.0"/>
     <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.14.0"/>
     <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.14.0"/>
+    <PackageVersion Include="SabreTools.Hashing" Version="1.2.3"/>
+    <PackageVersion Include="SabreTools.IO" Version="1.4.13"/>
+    <PackageVersion Include="SabreTools.Matching" Version="1.3.4"/>
     <PackageVersion Include="SabreTools.Models" Version="1.5.8"/>
+    <PackageVersion Include="SabreTools.Skippers" Version="1.1.3"/>
     <PackageVersion Include="Serilog" Version="4.3.0"/>
     <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0"/>
     <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.2"/>
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0"/>
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0"/>
     <PackageVersion Include="SharpCompress" Version="0.39.0"/>
+    <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="3.116.1" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'"/>
     <PackageVersion Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31"/>
+    <PackageVersion Include="System.IO.Compression" Version="4.3.0"/>
     <PackageVersion Include="System.Security.Principal.Windows" Version="5.0.0"/>
+    <PackageVersion Include="System.Text.Encoding.CodePages" Version="8.0.0"/>
     <PackageVersion Include="Text.Analyzers" Version="4.14.0"/>
     <PackageVersion Include="winfsp.net" Version="2.1.25156"/>
-    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3"/>
-    <PackageVersion Include="SabreTools.Hashing" Version="1.2.3"/>
-    <PackageVersion Include="SabreTools.IO" Version="1.4.13"/>
-    <PackageVersion Include="SabreTools.Matching" Version="1.3.4"/>
-    <PackageVersion Include="SabreTools.Skippers" Version="1.1.3"/>
-    <PackageVersion Include="System.IO.Compression" Version="4.3.0"/>
-    <PackageVersion Include="SharpCompress" Version="0.38.0"/>
-    <PackageVersion Include="System.Text.Encoding.CodePages" Version="8.0.0"/>
     <PackageVersion Include="ZstdSharp.Port" Version="0.8.6"/>
-    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.12.1"/>
-    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.12.1"/>
-    <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="3.116.1" Condition="$(RuntimeIdentifier.StartsWith('linux'))" />
   </ItemGroup>
 </Project>
