--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,11 +16,11 @@
     <PackageVersion Include="ErrorProne.NET.Structs" Version="0.1.2"/>
     <PackageVersion Include="InclusivenessAnalyzer" Version="1.3.0"/>
     <PackageVersion Include="MessageBox.Avalonia" Version="3.2.0"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.7"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7"/>
-    <PackageVersion Include="Microsoft.Extensions.Localization" Version="9.0.7"/>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.7"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.1.25451.107"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="10.0.0-rc.1.25451.107"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0-rc.1.25451.107"/>
+    <PackageVersion Include="Microsoft.Extensions.Localization" Version="10.0.0-rc.1.25451.107"/>
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rc.1.25451.107"/>
     <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.12.1"/>
     <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.12.1"/>
     <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.DataGrid.EntityFrameworkAdapter" Version="4.12.1"/>
@@ -47,7 +47,7 @@
     <PackageVersion Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31"/>
     <PackageVersion Include="System.IO.Compression" Version="4.3.0"/>
     <PackageVersion Include="System.Security.Principal.Windows" Version="5.0.0"/>
-    <PackageVersion Include="System.Text.Encoding.CodePages" Version="8.0.0"/>
+    <PackageVersion Include="System.Text.Encoding.CodePages" Version="10.0.0-rc.1.25451.107"/>
     <PackageVersion Include="Text.Analyzers" Version="4.14.0"/>
     <PackageVersion Include="winfsp.net" Version="2.1.25156"/>
     <PackageVersion Include="ZstdSharp.Port" Version="0.8.6"/>
