--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,8 +12,8 @@
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
     <PackageVersion Include="DotNetZip" Version="1.16.0"/>
     <PackageVersion Include="EFCore.BulkExtensions" Version="9.0.1"/>
-    <PackageVersion Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2"/>
-    <PackageVersion Include="ErrorProne.NET.Structs" Version="0.1.2"/>
+    <PackageVersion Include="ErrorProne.NET.CoreAnalyzers" Version="0.8.2-beta.1"/>
+    <PackageVersion Include="ErrorProne.NET.Structs" Version="0.6.1-beta.1"/>
     <PackageVersion Include="InclusivenessAnalyzer" Version="1.3.0"/>
     <PackageVersion Include="MessageBox.Avalonia" Version="3.2.0"/>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.1.25451.107"/>
